# golain-esp-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  idf_component.yml  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3
MQTT_OTA/: CMakeLists.txt  README.md
MQTT_OTA/main/: CMakeLists.txt  main.c
device-health/include/: constants.h
device-shadow/: CMakeLists.txt  Kconfig  README.md  proto-1
device-shadow/example/: CMakeLists.txt  sdkconfig
device-shadow/extras/: CMakeLists.txt
device-shadow/include/: shadow_helper.c  shadow_helper.h
device-shadow/proto/: shadow.pb.h  shadow.proto
device-shadow/protos/: shadow.pb.h  shadow.proto
deviceHealth/: CMakeLists.txt  README.md
deviceHealth/main/: CMakeLists.txt  constants.h  main.c  persistent_logs.h
device_health/example/: CMakeLists.txt  sdkconfig
device_health/include/: device_health.h
device_health/protos/: device_health.pb.c  device_health.pb.h
examples/data_points_publish/: .gitignore  sdkconfig  (+1 more)
golain/: CMakeLists.txt  golain.h
golain-ble-mesh/: CMakeLists.txt  Kconfig
golain-mqtt/: CMakeLists.txt  Kconfig
include/: constants.h  golain.h  golain_constants.h  golain_encode.h  golain_err.h  golain_hal.h  golain_types.h
old/device-shadow/: CMakeLists.txt
old/device-shadow/example/: sdkconfig.old
old/device-shadow/include/: shadow_helper.c  shadow_helper.h
old/device-shadow/protos/: shadow.pb.c  shadow.pb.h
persistent_logs/: CMakeLists.txt  Kconfig
protos/: device_health.pb.c  device_health.pb.h  logs.pb.c  logs.pb.h
src/: golain.c  golain_encode.c  golain_hal.c
(+106 files in other folders)
